--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -2,6 +2,7 @@
     fxLayout="row"
     fxLayout.sm="column"
     fxLayout.xs="column"
+    fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
