--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,12 @@
       <hr>
     </div>
   </div>
-  <div fxFlex>
+  
+  <div fxFlex [hidden]="dishes">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait!</h4>
+  </div>
+
+  <div fxFlex *ngIf="dishes">
     <mat-grid-list cols="2" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
@@ -15,4 +20,5 @@
       </mat-grid-tile>
     </mat-grid-list>
   <div>
+  
 </div>
