--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -50,9 +50,43 @@
             <p matLine>{{comment.rating}} Stars</p>
             <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
           </mat-list-item>
+          <mat-list-item *ngIf="commentForm.valid">
+            <p matLine>{{commentForm.value.comment}}</p>
+            <p matLine>{{commentForm.value.rating}} Stars</p>
+            <p matLine>-- {{commentForm.value.author}}</p>
+          </mat-list-item>
         </mat-list>
       </mat-card-content>
     </mat-card>
+
+    <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">
+            {{formErrors.author}}
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-slider thumbLabel formControlName="rating" [displayWith]="formatLabel" tickInterval="5"
+         min="1" max="5" value="5"></mat-slider>
+        <mat-error *ngIf="formErrors.rating">
+          {{formErrors.rating}}
+        </mat-error>
+      </p>
+      
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows="12" required></textarea>
+          <mat-error *ngIf="formErrors.comment">
+            {{formErrors.comment}}
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white"
+      [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 
 </div>
