--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,11 +5,16 @@
       <hr>
     </div>
   </div>
-  
-  <div fxFlex [hidden]="dishes">
+
+  <div fxFlex [hidden]="dishes || errMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait!</h4>
   </div>
 
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
+  
   <div fxFlex *ngIf="dishes">
     <mat-grid-list cols="2" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
