--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -60,7 +60,7 @@
      fxLayout="column"
      fxLayoutGap="10px">
 
-  <mat-list fxFlex>
+  <mat-list fxFlex *ngIf="leaders" [@expand]>
     <mat-list-item *ngFor="let leader of leaders">
       <img matListAvatar src={{leader.image}} alt={{leader.name}}>
       <h1 matLine> {{leader.name}} {{leader.abbr}}</h1>
