--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,35 +1,36 @@
-<div class="container"
-  fxLayout="column"
-  fxLayoutGap="10px">
-
+<div class="container" fxLayout="column" fxLayoutGap="10px">
   <div fxFlex>
     <div>
-        <h3>Contact Us</h3>
-        <hr>
+      <h3>Contact Us</h3>
+      <hr />
     </div>
   </div>
 
   <div fxFlex>
-    <h3>Location Information</h3> 
+    <h3>Location Information</h3>
     <div fxLayout="column" fxLayout.gt-sm="row">
       <div fxFlex="50" fxFlexOffset="20px">
         <h4>Our Address</h4>
         <address>
-          121, Clear Water Bay Road<br>
-          Clear Water Bay, Kowloon<br>
-          HONG KONG<br>
-          <i class="fa fa-phone"></i>: +852 1234 5678<br>
-          <i class="fa fa-fax"></i>: +852 8765 4321<br>
-          <i class="fa fa-envelope"></i>: 
-                <a href="mailto:confusion@food.net">confusion@food.net</a>
+          121, Clear Water Bay Road<br />
+          Clear Water Bay, Kowloon<br />
+          HONG KONG<br />
+          <i class="fa fa-phone"></i>: +852 1234 5678<br />
+          <i class="fa fa-fax"></i>: +852 8765 4321<br />
+          <i class="fa fa-envelope"></i>:
+          <a href="mailto:confusion@food.net">confusion@food.net</a>
         </address>
         <p></p>
         <div>
-          <a mat-raised-button href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+          <a mat-raised-button href="tel:+85212345678"
+            ><i class="fa fa-phone"></i> Call</a
+          >
           <a mat-raised-button><i class="fa fa-skype"></i> Skype</a>
-          <a mat-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+          <a mat-raised-button href="mailto:confusion@food.net"
+            ><i class="fa fa-envelope-o"></i> Email</a
+          >
         </div>
-        </div>
+      </div>
       <div fxFlex="40">
         <h4>Map of our Location</h4>
       </div>
@@ -37,54 +38,123 @@
   </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <div>
+      <div fxFlex *ngIf="!view && !feed">
+        <h3>Submitting Form</h3>
+        <mat-spinner></mat-spinner>
+      </div>
+      <div fxFlex *ngIf="errMess">
+        <h2>Error</h2>
+        <h4>{{errMess}}</h4>
+      </div>
+      <div fxFlex *ngIf="!view && feed" [@expand]>
+        <h3>Your Submission</h3>
+        <p>First Name: {{ feed.firstname }}</p>
+        <p>Last Name: {{ feed.lastname }}</p>
+        <p>Tel. Number: {{ feed.telnum }}</p>
+        <p>Email: {{ feed.email }}</p>
+        <p>Contact You?: {{ feed.agree }}</p>
+        <p>How?: {{ feed.contacttype }}</p>
+        <p>Feedback: {{ feed.message }}</p>
+      </div>
+    </div>
+    <form
+      novalidate
+      [formGroup]="feedbackForm"
+      #fform="ngForm"
+      (ngSubmit)="onSubmit()"
+      *ngIf="view"
+      [@expand]
+    >
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+          <input
+            matInput
+            formControlName="firstname"
+            placeholder="First Name"
+            type="text"
+            required
+          />
           <mat-error *ngIf="formErrors.firstname">
-            {{formErrors.firstname}}
+            {{ formErrors.firstname }}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
+          <input
+            matInput
+            formControlName="lastname"
+            placeholder="Last Name"
+            type="text"
+            required
+          />
           <mat-error *ngIf="formErrors.lastname">
-            {{formErrors.lastname}}
+            {{ formErrors.lastname }}
           </mat-error>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel. Number" type="number" pattern="[0-9]*" required>
+          <input
+            matInput
+            formControlName="telnum"
+            placeholder="Tel. Number"
+            type="number"
+            pattern="[0-9]*"
+            required
+          />
           <mat-error *ngIf="formErrors.telnum">
-            {{formErrors.telnum}}
+            {{ formErrors.telnum }}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="email" placeholder="Email" type="email" email required>
+          <input
+            matInput
+            formControlName="email"
+            placeholder="Email"
+            type="email"
+            email
+            required
+          />
           <mat-error *ngIf="formErrors.email">
-            {{formErrors.email}}
+            {{ formErrors.email }}
           </mat-error>
         </mat-form-field>
       </p>
       <table class="form-size">
         <td>
-          <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
+          <mat-slide-toggle formControlName="agree"
+            >May we contact you?</mat-slide-toggle
+          >
         </td>
         <td>
           <mat-select placeholder="How?" formControlName="contacttype">
-            <mat-option *ngFor="let ctype of contactType" [value]=ctype>
-              {{ctype}}
+            <mat-option *ngFor="let ctype of contactType" [value]="ctype">
+              {{ ctype }}
             </mat-option>
           </mat-select>
         </td>
       </table>
       <p>
         <mat-form-field class="full-width">
-          <textarea matInput formControlName="message"placeholder="Your Feedback" rows="12"></textarea>
+          <textarea
+            matInput
+            formControlName="message"
+            placeholder="Your Feedback"
+            rows="12"
+          ></textarea>
+          <mat-error *ngIf="formErrors.messgae">
+            {{ formErrors.message }}
+          </mat-error>
         </mat-form-field>
       </p>
-      <button type="submit" mat-button class="background-primary text-floral-white"
-      [disabled]="feedbackForm.invalid">Submit</button>
+      <button
+        type="submit"
+        mat-button
+        class="background-primary text-floral-white"
+        [disabled]="feedbackForm.invalid"
+      >
+        Submit
+      </button>
     </form>
   </div>
 </div>
